--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,10 @@
   dropdown:
     - name: myCPU
       link: https://mycpu.mylabpcb.com/pages/en/mycpu/introduction/
+    - name: myLogic
+      link: https://mylogic.mylabpcb.com/pages/en/myLogic/intro/
     - name: myCPU256
-      link: https://mycpu.mylabpcb.com/pages/en/mycpu/introduction/
+      link: https://mycpu256.mylabpcb.com/pages/en/mycpu/introduction/
 - name: Blog
   link: /blog/en/
 - name: About
