Remove products folder and collections in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -52,16 +52,14 @@ sass:
 
 
 defaults:
-  -
-    scope:
+  - scope:
       path: ""
       type: "pages"
     values:
       show_sidebar: false
       hide_footer: true
       hide_hero: true
-  -
-    scope:
+  - scope:
       path: ""
       type: "posts"
     values:
@@ -75,9 +73,3 @@ highlighter: rouge
 
 footer_menu: example_footer_menu
 
-collections:
-  products: 
-    output: true
-    layout: product
-    image: 
-    show_sidebar: false
